// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H1 /> renders 1`] = `
"<h1 data-css-4crvu7>
  <span>Hello</span>
</h1>"
`;

exports[`<H1 /> renders styles 1`] = `
"<h1 data-css-lkq5a>
  <span>Hello</span>
</h1>"
`;
